2006-12-12  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinButton.c (InitBoxes): Call Tcl_Panic()
	if loading of bitmap resources fails. This change
	generates an error if Tk is unable to find button
	widget resources instead of silently failing and
	then drawing widgets incorrectly.
	win/rc/tk_base.rc: If the user defines BASE_NO_TK_ICON
	then compile the base resources file without a
	"tk" icon. This change makes it easier to replace the
	default tk icon with a custom icon.
	[Patch 1614362]

2006-12-11  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* unix/tkUnixWm.c (TkWmMapWindow, WmClientCmd): Added support for
	_NET_WM_PID property from the EWMH spec. This is only installed when
	the client machine is set.
	(WmProtocolCmd, UpdateWmProtocols, TkWmProtocolEventProc): Added
	support for the _NET_WM_PING protocol from the EWMH spec. Note that
	the support for this is not exposed to the script level as that would
	prevent correct handling.

2006-12-10  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTheme.h, generic/ttk/ttkThemeInt.h,
	* generic/ttk/ttk.decls, generic/ttk/ttkTheme.c,
	* generic/ttk/ttkLayout.c, generic/ttk/ttkDecls.h:
	Rename typedef Ttk_Element => Ttk_ElementImpl.

2006-12-09  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkButton.c, generic/ttk/ttkImage.c,
	* generic/ttk/ttkLabel.c, generic/ttk/ttkWidget.h,
	* generic/ttk/ttkTheme.h, generic/ttk/ttkNotebook.c,
	* generic/ttk/ttkTreeview.c, doc/ttk_image.n:
	Merged duplicate functionality between image element factory, image
	element, and -image option processing.  Image element factory now
	takes an imageSpec argument instead of a separate image name and -map
	option.
	* tests/ttk/image.test(image-1.1): Can catch this error earlier now.

2006-12-06  Kevin Kenny  <kennykb@acm.org>

	* unix/configure.in: Further changes to avoid attempting to link
	* unix/configure:    against Xft libraries in a non-Xft build