@@ -50,44 +50,6 @@ proc ttk::deprecated'warning {old new} {
 #
 ::ttk::deprecated ::ttk::paned ::ttk::panedwindow
 
-if {[info exists ::ttk::deprecrated] && $::ttk::deprecated} {
-    ### Deprecated bits.
-    #
-
-    namespace eval ::tile {
-	# Deprecated namespace.  Define these only when requested
-	variable library
-	if {![info exists library]} {
-	    set library [file dirname [info script]]
-	}
-
-	variable version 0.7.8
-    }
-    package provide tile $::tile::version
-
-    ### Widgets.
-    #	Widgets are all defined in the ::ttk namespace.
-    #
-    #	For compatibility with earlier Tile releases, we temporarily
-    #	create aliases ::tile::widget, and ::t$widget.
-    #	Using any of the aliases will issue a warning.
-    #
-
-    namespace eval ttk {
-	variable widgets {
-	    button checkbutton radiobutton menubutton label entry
-	    frame labelframe scrollbar
-	    notebook progressbar combobox separator
-	    scale
-	}
-
-	variable wc
-	foreach wc $widgets {
-	    namespace export $wc
-	}
-    }
-}
-
 ### ::ttk::ThemeChanged --
 #	Called from [::ttk::style theme use].
 #	Sends a <<ThemeChanged>> virtual event to all widgets.
